updating our details

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <section class="details">
       <h1>Introduction</h1>
       <p> I am 22 years old currently working at a restaurant and looking to pursue a new career</p>
-      <h1> WHere I'm from</h1>
-      <p> I am from CUidad Juarez, Mexico</p>
+      <h1> Where I'm from</h1>
+      <p> I am from Ciudad Juarez, Mexico</p>
       <h1> What are your favorite hobbies?</h1>
       <p> I like to lift weights, play videogames, and box</p>
       <h1>What's your dream job?</h1>
       <p> To be a a software developer at a prestigious company </p>
       <h1> Where do you live?</h1> 
-      <p> I live in kent,Washginton</p>
+      <p> I live in Kent,Washginton</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p> I find Web Developing interesting and enjoy the creativiy and building it requires.</p>
+      <p> I find web developing interesting and enjoy the creativiy and building it requires.</p>
     </section>
 
     <footer id="footer">
